--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ footer a {
 
   <!-- Efek blur untuk latar belakang -->
   <div id="bodyblur">
-    <img src="bg.jpg" id="wallpaper" />
+    <img src="bg.png" id="wallpaper" />
   </div>
 
   <!-- Slider Swiper -->
@@ -443,7 +443,7 @@ footer a {
           <img src="glg.gif" />
         </div>
         <h1 id="teks1" class="scale0 itim" style="font-size: 20px">
-          this is for youuu 🫶<br />
+          this is for youuu<br />
           ⇒ ⇒ ⇒
         </h1>
       </div>
@@ -454,7 +454,7 @@ footer a {
           <img src="emh.gif" />
         </div>
         <h1 id="teks2" class="scale0 itim" style="font-size: 19px">
-          ciee, whose birthday is today 💞<br /><br /><span style="font-size: 16px; font-weight: 400">swipe & read to the end!</span><br /><br />
+          ciee, whose birthday is today<br /><br /><span style="font-size: 16px; font-weight: 400">swipe & read to the end!</span><br /><br />
             ⇒ ⇒ ⇒
         </h1>
       </div>
@@ -467,21 +467,14 @@ footer a {
         <!-- Konten teks -->
         <div id="scroll-container" class="blocktext">
           <p id="teks3" class="itim" style="font-size: 16px; margin-left: 40px">
-            <span class="pink">Hai</span> sayangkuuu cintakuuuuuu
-            duniakuuu semestakuuuuuu, <br><br /><b class="putih merah"><i>happy birthday yaaa 💐</i></b><br />semogaa
-            dengan bertambahnya usiamuuu bisaa menjadiii
-            pribadi yang lebih baikk, panjangg umurr, sehat selaluu, berbakti
-            kepada orang tuaaa, serta segala doa dan cita citamuuu dikabulkann
-            dan segala urusan dipermudahkannn, <i>aminnn</i>.<br /><br />udaa
-            semakin dewasaaa sajaa yaa kamu inii 😋 jangan pernah takut gagal
-            yaaa, aku disiniii bakalan ngedukung kamuuuu selalu, jadiilahh
-            anak yang baik ya sayangg, jangann lupa bersyukurrr,<br /><br />maaf
-            ya kalo aku blum bisa jadi apa yang kamu mauuu, dan maaf bgt kalo
-            selama ini aku sering buat masalah, maaf ya 🫠 aku selalu berdoaa
-            agar kamu tetap berada dalam lindungan-Nya, intinyaa ttep mnjdi
+            <span class="pink">Hai</span> Bila, <br><br /><b class="putih merah"><i>Selamat ulang tahun yaaa 💐</i></b><br />semoga
+            di usia yang baru ini bisa menjadi
+            pribadi yang lebih baik, panjang umur, sehat selalu, dan apa yang kamu cita-citain bisa tercapai, <i>aminnn</i>.<br /><br />udah
+            makin dewasa aja ya kamu, jangan pernah takut gagal, jangan lupa bersyukur,<br /><br /> aku selalu berdoa
+            agar kamu tetap berada dalam lindungan-Nya, intinya ttep jdi
             pribadii yang lebih baikk.<br /><br />sekalilagii happy birthday
-            sayangkuuu cintakuuuuu,
-            <i>remain a good person whenever and wherever</i> 🥳💐🫶✨
+            bilaa,
+            <i>remain a good person whenever and wherever</i> ✨
           </p>
         </div>
       </div>
