--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ footer a {
   </script>
 
 <footer>
-  <a href="https://himang.my.id">Himang.my.id</a>
+  <a href="https://www.instagram.com/dkorm_">by diko</a>
 </footer>
 </body>
 
